<resources>
    <string name="app_name">ChatAppDemo</string>

    <string name="preferances_islogin">isLogin</string>


    <string name="font_reguler">"@font/opensans_bold"</string>
    <string name="font_italic">"@font/opensans_semibolditalic.ttf"</string>


    <string name="str_enter_mobile_number">Enter Mobile Number</string>
    <string name="str_please_enter_message">Please Enter Message</string>
    <string name="str_enter_user_name">Enter User Name</string>
    <string name="str_enter_valid_mobile_number">Enter Mobile Number</string>
    <string name="str_user_list">User List</string>
    <string name="lbl_mobile_number">Mobile Number</string>
    <string name="lbl_user_name">User Name</string>
    <string name="lbl_you_are_not_register_pelease_fill_detail">You Are Not Register User Please Register</string>
    <string name="lbl_email">Email</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please wait</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_ok">OK</string>
    <string name="str_please_enter_email">Please Enter Email</string>
    <string name="str_please_enter_user_name">Please Enter User Name</string>
    <string name="str_enter_valid_email">Please Enter Valid Email</string>
    <string name="logout">Logout</string>
    <string name="str_confirmation">Confirmation</string>
    <string name="str_message">Message</string>
    <string name="str_success">Success</string>
    <string name="str_ok">OK !</string>
    <string name="str_great">Great !</string>
    <string name="str_no_data_found">No Data Found</string>
    <string name="no_internet_access">Please check your internet connection.</string>

</resources>