<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="registerViewModel"
            type="com.example.chatappdemo.viewmodel.register.UserRegisterViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/act_main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:elevation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txvToolbarTitle"
                    style="@style/Toolbar.Title"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_register" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/login_user_back_color">



            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/activityMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:orientation="vertical"
                android:visibility="visible">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txvLabelBrandName"
                    style="@style/TextStyle.CreateTemplate.Label.EditText"
                    android:text="@string/lbl_user_name"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUserName"
                    style="@style/TextStyle.CreateTemplate.EditText"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/str_enter_user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:maxLength="15"
                    android:layout_marginTop="20dp"
                    android:text="@={registerViewModel.userName}"
                    app:layout_constraintTop_toBottomOf="@+id/txvLabelBrandName" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEmail"
                    style="@style/TextStyle.CreateTemplate.Label.EditText"
                    android:layout_marginTop="20dp"
                    android:text="@string/lbl_email"
                    app:layout_constraintTop_toBottomOf="@+id/etUserName"
                    tools:layout_editor_absoluteX="0dp">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    style="@style/TextStyle.CreateTemplate.EditText"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/str_please_enter_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginTop="20dp"
                    android:text="@={registerViewModel.userEmail}"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnServerLogin"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:onClick="@{(v) -> registerViewModel.onUserRegisterClick()}"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:text="@string/btn_register"
                    android:textSize="@dimen/_11ssp"
                    android:layout_marginTop="@dimen/_40sdp"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    tools:layout_editor_absoluteX="16dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:visibility="@{registerViewModel.isLoading ? View.VISIBLE : View.GONE}">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/address_looking_up"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

        </FrameLayout>

    </LinearLayout>


</layout>