<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginViewModel"
            type="com.example.chatappdemo.viewmodel.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/act_main_appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:contentInsetEnd="0dp"
                app:contentInsetStart="0dp"
                app:elevation="0dp"
                app:popupTheme="@style/AppTheme.PopupOverlay">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txvToolbarTitle"
                    style="@style/Toolbar.Title"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/btn_login" />

            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/login_user_back_color">



            <LinearLayout
                android:id="@+id/activityMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txvLabelBrandName"
                    style="@style/TextStyle.CreateTemplate.Label.EditText"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_64sdp"
                    android:text="@string/lbl_mobile_number">

                </androidx.appcompat.widget.AppCompatTextView>


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUserName"
                    style="@style/TextStyle.CreateTemplate.EditText"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/str_enter_mobile_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={loginViewModel.mobileNumber}" />



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnServerLogin"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:onClick="@{(v) -> loginViewModel.onUserLoginClick()}"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_12sdp"
                    android:text="@string/btn_login"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

           <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:visibility="@{loginViewModel.isLoading ? View.VISIBLE : View.GONE}">

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/address_looking_up"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>

        </FrameLayout>

    </LinearLayout>
</layout>